--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-/target
-/classes
-/checkouts
-profiles.clj
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl-port
-/.prepl-port
-.hgignore
-.hg/
-/.clj-kondo/
-*.json
+test.py
+test.txt
